--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(utils OBJECT intcode.cpp)
+add_library(utils OBJECT intcode.cpp coord.cpp)
 target_compile_features(utils PUBLIC cxx_std_17)
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
