--- a/day3/CMakeLists.txt
+++ b/day3/CMakeLists.txt
@@ -1,3 +1,2 @@
 add_library(day3 OBJECT solution.cpp)
-target_compile_features(day3 PUBLIC cxx_std_17)
-target_link_libraries(day3 Catch2::Catch2)
+target_link_libraries(day3 utils Catch2::Catch2)
