--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -2,8 +2,7 @@ add_library(utils OBJECT intcode.cpp coord.cpp)
 target_compile_features(utils PUBLIC cxx_std_17)
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(driver)
-target_sources(driver PRIVATE main.cpp)
+add_executable(driver main.cpp)
 target_link_libraries(driver PRIVATE
     utils
     day2
@@ -23,4 +22,5 @@ target_link_libraries(driver PRIVATE
     day16
     day17
     day18
-    day19)
+    day19
+    day20)
