--- a/2020/CMakeLists.txt
+++ b/2020/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
 add_executable(aoc2020 ${sources})
 target_link_libraries(aoc2020 PRIVATE Catch2::Catch2)
+target_compile_features(aoc2020 PUBLIC cxx_std_20)
